[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu_connector"
version = "0.1.0"
description = "A standalone Feishu/Lark Open API connector"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "python-dotenv"]
